Mon Jan 27 17:10:30 2003  Owen Taylor  <otaylor@redhat.com>
 
 	* Makefile.am (gdk-pixbuf.loaders): Rewrite to run
 	on the .la files rather than looking for .so files.
 	(#102142, Martin Gansser)
 
 	* Makefile.am: Don't build gdk-pixbuf.loaders when
 	cross-compiling.
 
2003-01-05  Tor Lillqvist  <tml@iki.fi>

	* Makefile.am (gdk-pixbuf.loaders): Use @SOEXT@ in the find command.

	* gdk_pixbuf.def: Add gdk_pixbuf_loader_set_size.

2003-01-03  Matthias Clasen  <maclas@gmx.de>

	* gdk-pixbuf-io.c (gdk_pixbuf_new_from_xpm_data): Don't crash if
	gdk-pixbuf.loaders file is missing.  (#102222)

2002-12-08  Matthias Clasen  <maclas@gmx.de>

	* gdk-pixbuf-animation.h: 
	* gdk-pixbuf-io.h: Add /*< public|private >*/ markers.

Sat Dec  7 10:14:05 2002  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am (gdk-pixbuf.loaders): Make gdk-pixbuf.loaders
	also depend gdk-pixbuf-query-loaders. (#97096, Daniel Elstner)

2002-12-05  Matthias Clasen  <maclas@gmx.de>

	* io-ico.c: Remove leftover debug output.  (#100357, Owen Taylor)

2002-12-04  Bastien Nocera  <hadess@hadess.net>

	* io-tiff.c: (tiff_image_parse): use G_BIG_ENDIAN instead of
	WORDS_BIGENDIAN which isn't set by configure.in

2002-11-29  Matthias Clasen  <maclas@gmx.de>

	* gdk-pixbuf-animation.c: 
	* gdk-pixbuf.c: Add deprecation docs. 

2002-11-28  Matthias Clasen  <maclas@gmx.de>

	* gdk-pixbuf/gdk-pixbuf-io.c:
	* gdk-pixbuf/gdk-pixbuf-loader.c:
	* gdk-pixbuf/gdk-pixbuf.c: Document 2.2 API additions. I'm not
	going to list all individual functions here; if you want to see
	the list, grep for "Since: 2.2".

Fri Nov  8 19:06:07 2002  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am (gdk-pixbuf.loaders): Make gdk-pixbuf.loaders
	file depend on the loaders (#97096, Jeff Waugh)

Wed Nov  6 15:19:53 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* io-gif.c (CHECK_LZW_SP): Fix trailing semicolon on macro,
 	clean up a bit.
 
2002-11-05  Matthias Clasen  <maclas@gmx.de>
